k3s-manifests/03-osrm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osrm-service
  namespace: osrm
spec:
  selector:
    app: osrm-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
