k3s-manifests/04-osrm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osrm-ingress
  namespace: osrm
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /route
            pathType: Prefix
            backend:
              service:
                name: osrm-service
                port:
                  number: 80
          - path: /match
            pathType: Prefix
            backend:
              service:
                name: osrm-service
                port:
                  number: 80
          - path: /nearest
            pathType: Prefix
            backend:
              service:
                name: osrm-service
                port:
                  number: 80
          - path: /table
            pathType: Prefix
            backend:
              service:
                name: osrm-service
                port:
                  number: 80
